# epd2-civic-os

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GITHUB_ACTIONS_START.md  LICENSE  LOCAL_VERIFICATION.md  Makefile  README.md  SECURITY.md  conftest.py  package-lock.json  package.json  pyproject.toml  verify-and-package.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture_change.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  verify-and-package.yml
contracts/: README.md
contracts/events/: account-event-payload.v1.schema.json  amendment-status-changed-payload.v1.schema.json  appeal-status-changed-payload.v1.schema.json  ballot-status-changed-payload.v1.schema.json  contribution-flagged-payload.v1.schema.json  contribution-status-changed-payload.v1.schema.json  credential-issued-or-revoked-payload.v1.schema.json  credential-validation-failed-payload.v1.schema.json  delegation-snapshot-created-payload.v1.schema.json  delegation-status-changed-payload.v1.schema.json  discussion-status-changed-payload.v1.schema.json  eligibility-evaluated-payload.v1.schema.json  eligibility-snapshot-created-payload.v1.schema.json  governance-decision-payload.v1.schema.json  governance-policy-payload.v1.schema.json  governance-role-assignment-payload.v1.schema.json  governance-technical-challenge-payload.v1.schema.json  identity-event-payload.v1.schema.json  initiative-status-changed-payload.v1.schema.json  initiative-support-changed-payload.v1.schema.json  initiative-version-created-payload.v1.schema.json  moderation-case-status-changed-payload.v1.schema.json  moderation-decision-payload.v1.schema.json  result-published-payload.v1.schema.json  tally-status-changed-payload.v1.schema.json  transparency-audit-export-payload.v1.schema.json  transparency-disclosure-policy-payload.v1.schema.json  transparency-ledger-entry-payload.v1.schema.json  transparency-lobby-log-entry-payload.v1.schema.json  vote-envelope-status-changed-payload.v1.schema.json  vote-rejected-payload.v1.schema.json  vote-superseded-payload.v1.schema.json
contracts/openapi/: pack-02.yaml  pack-03.yaml  pack-04.yaml  pack-05.yaml
contracts/reason-codes/: README.md  pack-02.yml  pack-03.yml  pack-04.yml  pack-05.yml
contracts/schemas/: account.schema.json  amendment.schema.json  appeal.schema.json  audit-event.schema.json  audit-export-package.schema.json  ballot-option.schema.json  ballot.schema.json  contribution.schema.json  (+26 more)
frontend/: README.md
scripts/: check_forbidden_files.py  check_repository.py  verify_versions.py
services/: README.md
services/account-service/: README.md  pyproject.toml
services/account-service/src/epd2_account_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/account-service/tests/: test_application.py  test_domain.py
services/audit-core/: README.md  pyproject.toml
services/audit-core/src/epd2_audit_core/: __init__.py  application.py  domain.py  exceptions.py  hash_chain.py  storage.py
services/audit-core/tests/: test_application.py  test_domain.py  test_hash_chain.py  test_storage.py
services/credential-service/: README.md  pyproject.toml
services/credential-service/src/epd2_credential_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py  validation.py
services/credential-service/tests/: test_application.py  test_domain.py  test_storage.py  test_validation.py
services/delegation-service/: README.md  pyproject.toml
services/delegation-service/src/epd2_delegation_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/delegation-service/tests/: test_application.py  test_domain.py  test_storage.py
services/deliberation-service/: README.md  pyproject.toml
services/deliberation-service/src/epd2_deliberation_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/deliberation-service/tests/: test_application.py  test_domain.py  test_storage.py
services/eligibility-service/: README.md  pyproject.toml
services/eligibility-service/src/epd2_eligibility_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/eligibility-service/tests/: test_application.py  test_domain.py
services/governance-service/: README.md  pyproject.toml
services/governance-service/src/epd2_governance_service/: __init__.py  application.py  bootstrap.py  domain.py  events.py  exceptions.py  storage.py
services/governance-service/tests/: test_application.py  test_bootstrap.py  test_domain.py  test_storage.py
services/identity-service/: README.md  pyproject.toml
services/identity-service/src/epd2_identity_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/identity-service/tests/: test_application.py  test_domain.py
services/initiative-service/: README.md  pyproject.toml
services/initiative-service/src/epd2_initiative_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/initiative-service/tests/: test_application.py  test_domain.py  test_storage.py
services/tally-service/: README.md  pyproject.toml
services/tally-service/src/epd2_tally_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/tally-service/tests/: test_application.py  test_domain.py  test_storage.py
services/transparency-service/: README.md  pyproject.toml
services/transparency-service/src/epd2_transparency_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/transparency-service/tests/: test_application.py  test_domain.py  test_storage.py
services/voting-service/: README.md  pyproject.toml
services/voting-service/src/epd2_voting_service/: __init__.py  application.py  domain.py  events.py  exceptions.py  storage.py
services/voting-service/tests/: test_application.py  test_domain.py  test_storage.py
(+89 files in other folders)
