[project]
name = "epd2-civic-os"
version = "0.1.0"
description = "EPD2 Civic OS monorepo workspace root (infrastructure skeleton, no business logic)"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
]

# Lower bounds are the versions this repository's checks (Ruff ruleset,
# mypy strictness, pytest usage) were authored and verified against.
# Upper bounds (next major excluded) are a reproducibility guard, not a
# guess at exact patch versions this session cannot verify against a live
# index — `uv lock` (run with network access; see LOCAL_VERIFICATION.md)
# resolves the actual pinned version within each range and records it in
# uv.lock.
[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<6",
    "mypy>=1.11,<2",
    "ruff>=0.6,<1",
    "pydantic>=2.9,<3",
    "pre-commit>=3.8,<4",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/python/epd2-core"]

[tool.uv.sources]
epd2-core = { workspace = true }

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages/python/epd2-core/src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["epd2_core"]

# --- mypy ---
[tool.mypy]
python_version = "3.12"
mypy_path = ["packages/python/epd2-core/src"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

# No per-test-module relaxation is configured: all test modules in this
# repository are fully typed and pass the same strict settings as
# application code.

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["packages/python/epd2-core/tests", "tests/repository"]
addopts = "-ra"
