[project]
name = "epd2-account-service"
version = "0.1.0"
description = "EPD2 Civic OS Account Service — owns Account (canon section 7.2, no PII)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_account_service"]
