[project]
name = "epd2-audit-core"
version = "0.1.0"
description = "EPD2 Civic OS Audit Core service — append-only, hash-chained AuditEvent log (owns AuditEvent, canon section 18.1)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_audit_core"]
