[project]
name = "epd2-credential-service"
version = "0.1.0"
description = "EPD2 Civic OS Credential Service — owns ParticipationCredential (canon section 10, no identity linkage)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_credential_service"]
