[project]
name = "epd2-delegation-service"
version = "0.1.0"
description = "EPD2 Civic OS Delegation Service — owns Delegation, DelegationSnapshot (canon section 16, ADR-005)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_delegation_service"]
