[project]
name = "epd2-deliberation-service"
version = "0.1.0"
description = "EPD2 Civic OS Deliberation Service — owns Discussion and Contribution (canon section 13, no PACK-02 dependency, ADR-008)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_deliberation_service"]
