[project]
name = "epd2-governance-service"
version = "0.1.0"
description = "EPD2 Civic OS Governance Service — owns RoleAssignment/GovernancePolicy/GovernanceDecision/TechnicalChallenge (canon section 19b; ADR-016 through ADR-020)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
    "epd2-voting-service",
    "epd2-tally-service",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_governance_service"]
