[project]
name = "epd2-identity-service"
version = "0.1.0"
description = "EPD2 Civic OS Identity Service — owns IdentityRecord (canon section 7.3)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_identity_service"]
