[project]
name = "epd2-initiative-service"
version = "0.1.0"
description = "EPD2 Civic OS Initiative Service — owns Initiative, InitiativeVersion, SupportRecord, Amendment, SourceRecord (canon sections 11-12, ADR-005)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
    "epd2-credential-service",
    "epd2-eligibility-service",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_initiative_service"]
