[project]
name = "epd2-tally-service"
version = "0.1.0"
description = "EPD2 Civic OS Tally Service — owns Tally/ResultPublication (canon section 15.5/15.6, ADR-005 consolidation)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_tally_service"]
