[project]
name = "epd2-voting-service"
version = "0.1.0"
description = "EPD2 Civic OS Voting Service — owns Ballot, BallotOption, VoteEnvelope, VoteReceipt (canon section 15.1-15.4, ADR-005)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "epd2-core",
    "epd2-audit-core",
    "epd2-credential-service",
    "epd2-eligibility-service",
    "epd2-governance-service",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epd2_voting_service"]
